tests/models/struct/unnamed/i128/pass/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    i128
);
fn main() {}
