tests/models/struct/unnamed/i128/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2.0)]
    i128
);
fn main() {}
